--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  margin-top: 400px;
+  margin-top: 120px;
   width: 100%;
   height: 100%;
   background-color: transparent;
@@ -39,10 +39,13 @@ body {
   justify-content: center;
   color: white;
   font-family: Arial, sans-serif;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+  0 0 20px rgba(255, 255, 255, 0.8), 0 0 30px rgba(255, 255, 255, 0.8),
+  0 0 40px #ffffff, 0 0 70px #ffffff, 0 0 80px #ffffff, 0 0 100px #ffffff;
 }
 
 .restart-menu p {
-  font-size: 70px;
+  font-size: 20px;
 }
 
 .active {
@@ -62,33 +65,12 @@ body {
   align-items: center;
   justify-content: center;
   font-family: Arial, sans-serif;
-  font-size: 70px;
+  font-size: 20px;
   text-transform: uppercase;
   letter-spacing: 8px;
   color: white;
-  text-shadow: 0 0 10px black,
-    0 0 20px rgba(255, 255, 255, 0.8), 0 0 30px rgba(255, 255, 255, 0.8),
-    0 0 40px #ffffff, 0 0 70px #ffffff, 0 0 80px #ffffff, 0 0 100px #ffffff;
-}
-
-#start {
-  visibility: visible;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: transparent;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-family: Arial, sans-serif;
-  font-size: 70px;
-  text-transform: uppercase;
-  letter-spacing: 8px;
-  color: white;
-  text-shadow: 0 0 10px black,
+  font-weight: bolder;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
     0 0 20px rgba(255, 255, 255, 0.8), 0 0 30px rgba(255, 255, 255, 0.8),
     0 0 40px #ffffff, 0 0 70px #ffffff, 0 0 80px #ffffff, 0 0 100px #ffffff;
 }
@@ -103,12 +85,13 @@ body {
 
 h1 {
   font-family: "Arial", sans-serif;
-  font-size: 180px;
+  font-size: 60px;
   font-weight: bold;
   color: #ffcc00;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 8px;
+  
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
     0 0 20px rgba(255, 255, 255, 0.8), 0 0 30px rgba(255, 255, 255, 0.8),
     0 0 40px #ffcc00, 0 0 70px #ffcc00, 0 0 80px #ffcc00, 0 0 100px #ffcc00;
