--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,10 @@ body {
   font-size: 20px;
 }
 
+#restart :hover,
+#restartExit :hover  {
+  text-decoration: underline;
+}
 .active {
   visibility: visible;
 }
@@ -80,7 +84,9 @@ body {
 #start p {
   margin-bottom: 20px;
 }
-
+#start :hover {
+  text-decoration: underline;
+}
 .inactive {
   visibility: hidden;
 }
@@ -93,7 +99,7 @@ h1 {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 8px;
-
+  text-decoration: none !important;
   cursor: default;
 
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
@@ -106,17 +112,15 @@ h1 {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 80vw;
+  min-height: 80vh;
   background-color: transparent;
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
-  justify-content: center;
   font-family: Arial, sans-serif;
   font-size: 20px;
-  text-transform: uppercase;
+
   letter-spacing: 8px;
   color: white;
   font-weight: bolder;
@@ -130,12 +134,15 @@ h1 {
 
 #exit {
   margin-top: 30px;
+  text-align: center;
   color: white;
   font-weight: bolder;
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
     0 0 20px rgba(255, 255, 255, 0.8), 0 0 30px rgba(255, 255, 255, 0.8),
     0 0 40px #ffffff, 0 0 70px #ffffff, 0 0 80px #ffffff, 0 0 100px #ffffff;
 }
+
+
 #startItem1,
 #startItem2,
 #startItem3,
@@ -145,19 +152,18 @@ h1 {
 
 .box-transparent {
   position: fixed;
-  height: 100vh;
+  height: 80vh;
   background-color: rgba(100, 100, 100, 0.6);
-  padding: 20px;
-  margin-left: 8%;
-  margin-right: 8%;
-  margin-top: 2%;
-  margin-bottom: 2%;
-  max-height: 480px;
+  padding: 2vw;
+  margin-left: 8vw;
+  margin-right: 8vw;
+  margin-top: 5vh;
+  margin-bottom: 2vh;
+  max-height: 80vh;
   vertical-align: middle;
 }
 
 .text-instructions {
   font-size: medium;
-  text-transform: lowercase;
   font-weight: lighter;
 }
